# EmulationStation-X

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  README.md  THEMES.md  Temas.md  ThemeOptions.md  emulationstation
es-app/: CMakeLists.txt
es-app/src/: CollectionSystemManager.cpp  FileData.cpp  FileData.h  FileSorts.cpp  Gamelist.cpp  LocaleES.cpp  LocaleES.h  LocaleESHook.cpp  MetaData.cpp  NavigationSounds.h  Paths.h  RestartRequest.cpp  RestartRequest.h  SystemData.cpp  SystemData.h  SystemScreenSaver.cpp  ThemeOptions.cpp  ThemeOptions.h  main.cpp
es-app/src/audio/: BackgroundMusicManager.cpp  BackgroundMusicManager.h
es-app/src/components/: ScraperSearchComponent.cpp  TextListComponent.h
es-app/src/guis/: GuiCollectionSystemsOptions.cpp  GuiGameScraper.cpp  GuiGamelistFilter.cpp  GuiGamelistOptions.cpp  GuiGamelistOptions.h  GuiGeneralScreensaverOptions.cpp  GuiInfoPopup.cpp  GuiInfoTextViewer.h  GuiMenu.cpp  GuiMenu.h  GuiMetaDataEd.cpp  GuiScraperMulti.cpp  GuiScraperStart.cpp  GuiScreensaverOptions.cpp  GuiSettings.cpp  GuiSkyscraperMenu.cpp  GuiSkyscraperMenu.h  GuiSlideshowScreensaverOptions.cpp  GuiTextEditKeyboardPopup.cpp  GuiTextEditKeyboardPopup.h  GuiThemeBrowser.cpp  GuiThemeBrowser.h  GuiThemeOptions.cpp  GuiThemeOptions.h  GuiVideoScreensaverOptions.cpp
es-app/src/scrapers/: ScreenScraper.cpp
es-app/src/views/: SystemView.cpp  SystemView.h  UIModeController.cpp  ViewController.cpp
es-app/src/views/gamelist/: BasicGameListView.cpp  BasicGameListView.h  DetailedGameListView.cpp  DetailedGameListView.h  GameCarouselTest.h  GridGameListView.cpp  GridGameListView.h  ISimpleGameListView.cpp  ISimpleGameListView.h  VideoGameListView.cpp  VideoGameListView.h
es-core/: CMakeLists.txt
es-core/src/: AudioManager.cpp  InputManager.cpp  InputManager.h  LocaleESHook.h  Settings.cpp  Sound.cpp  Sound.h  ThemeData.cpp  ThemeData.h  Window.cpp  Window.h
es-core/src/components/: BusyComponent.cpp  ButtonComponent.cpp  ButtonComponent.h  ComponentGrid.cpp  ComponentGrid.h  ComponentList.cpp  ControllerStatusComponent.cpp  ControllerStatusComponent.h  DateTimeComponent.cpp  GridTileComponent.cpp  GridTileComponent.h  HelpComponent.cpp  HelpComponent.h  ImageGridComponent.h  KeyboardKeyComponent.cpp  KeyboardKeyComponent.h  MarqueeTextComponent.cpp  MarqueeTextComponent.h  MenuComponent.cpp  ScrollableContainer.cpp  ScrollableContainer.h  ScrollableTextComponent.cpp  ScrollableTextComponent.h  TextComponent.cpp  TextComponent.h  TextEditComponent.cpp  TextEditComponent.h  VideoVlcComponent.cpp  VideoVlcComponent.h
es-core/src/guis/: GuiDetectDevice.cpp  GuiInputConfig.cpp  GuiMsgBox.cpp
es-core/src/resources/: ThemeSounds.cpp  ThemeSounds.h
esx/theme-previews/: themes.ini
lang/: Italiano.ini  de.ini  en.ini  es.ini  fr.ini  gn.ini  gn_PY.ini  guarani.ini  it.ini  ja (日本語).ini  ja.ini  pt.ini  ru.ini
resources/: artwork.xml  config.ini  mamebioses.xml  mamedevices.xml  mamenames.xml  skyscraper-esx.sh  skyscraper.sh
